cmake_minimum_required(VERSION 3.0.0)
project(libuv_cpp_wrapper VERSION 0.1.0)

link_directories(/usr/local/lib)
add_definitions("-Wall -g")
SET(CMAKE_BUILD_TYPE "Debug")
# SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
include_directories(/home/ele/libuv/include)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} srcs)
add_executable(libuv_cpp_wrapper ${srcs})
# add_library(Tools ./Tools.cpp)
# add_library(FileLog FileLog.cpp)
# add_library(Handle ./Handle.cpp)
# add_library(EventLoop ./EventLoop.cpp)
# add_library(TcpAccepter ./TcpAccepter.cpp)
# add_library(Connection ./Connection.cpp)
# target_link_libraries(Handle /home/ele/libuv/out/Debug/libuv.a pthread)
# target_link_libraries(EventLoop /home/ele/libuv/out/Debug/libuv.a pthread FileLog Tools)
# target_link_libraries(Connection Handle /home/ele/libuv/out/Debug/libuv.a pthread Tcp)
# target_link_libraries(TcpAccepter /home/ele/libuv/out/Debug/libuv.a pthread EventLoop Handle FileLog Tools )
# target_link_libraries(EchoServer Tcp Loop Handle Connection /home/ele/libuv/out/Debug/libuv.a pthread) 
# target_link_libraries(FileLog pthread)
target_link_libraries(libuv_cpp_wrapper pthread /home/ele/libuv/out/Debug/libuv.a log4cpp)

